nesc-frontend/src/test/resources/integration/programs/good/good20/N.nc
module N
{
   provides command void c(char arg);
}
implementation
{
   static char sum;

   command void c(char arg)
   {
      sum += arg;
   }
}
